<?xml version="1.0"?>
<package format="2">
    <name>turtles_catch_up</name>
    <version>0.1.0</version>
    <description>The turtles_catch_up package</description>
    <maintainer email="charushin2000@gmail.com">charushin</maintainer>

    <license>Empty</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>rospy</exec_depend>

    <export>
    </export>
</package>
